@@ -13,7 +13,7 @@ Author: Kenneth Benoit [aut, cre],
     Kohei Watanabe [ctb],
     Benjamin Lauderdale [ctb]
 Maintainer: Kenneth Benoit <kbenoit@lse.ac.uk>
-Version: 0.8.5-6
+Version: 0.8.5-7
 Date: 2015-10-06
 Description: A fast, flexible toolset for for the management, processing, and
     quantitative analysis of textual data in R.
